# qdrant-s390x

./: Cargo.toml  Cross.toml  Dockerfile  README.md
.github/workflows/: docker-image.yml  release-artifacts.yml  rust.yml
docs/: CONTRIBUTING.md  DEVELOPMENT.md  PERSISTENCE_ENDIANNESS.md  S390X.md  S390X_PR_NOTES.md
lib/collection/src/: hash_ring.rs
lib/common/common/benches/: mmap_hashmap.rs
lib/common/common/src/: mmap_hashmap.rs  stable_hash.rs
lib/gridstore/src/: blob.rs  tracker.rs
lib/gridstore/src/bitmask/: mod.rs
lib/quantization/: Cargo.toml  build.rs
lib/quantization/benches/: persistence_smoke.rs
lib/quantization/src/: encoded_vectors_binary.rs  encoded_vectors_u8.rs  lib.rs
lib/quantization/tests/integration/: endian.rs  main.rs
lib/segment/: Cargo.toml  build.rs
lib/segment/benches/: chunked_mmap_vectors_smoke.rs  hnsw_persistence_smoke.rs
lib/segment/src/: telemetry.rs
lib/segment/src/data_types/: facets.rs
lib/segment/src/segment_constructor/: segment_builder.rs
lib/segment/src/spaces/: simple.rs
lib/segment/src/vector_storage/: chunked_mmap_vectors.rs  mmap_endian.rs  mod.rs
lib/sparse/src/common/: types.rs
lib/sparse/src/index/: compressed_posting_list.rs  loaders.rs
lib/trififo/: Cargo.toml
lib/trififo/benches/: cache_comparison.rs
src/common/telemetry_ops/: app_telemetry.rs  memory_telemetry.rs
tests/: s390x_http_smoke.rs  s390x_snapshot_fixture_matrix.rs  s390x_snapshot_smoke.rs
tools/: cargo_cmd_arch.sh  check-persistence-endianness.sh  run-s390x-gates.sh  s390x-container-smoke.sh  s390x-perf-smoke.sh
(+30 files in other folders)
